--- a/imagenes/desktop.ini
+++ b/imagenes/desktop.ini
@@ -1,3 +1,9 @@
-[LocalizedFileNames]
-Captura de pantalla 2025-05-31 195704.png=@Captura de pantalla 2025-05-31 195704,0
-Captura de pantalla 2025-05-31 195420.png=@Captura de pantalla 2025-05-31 195420,0
+import os
+import sys
+path = os.path.expanduser('~/django_scrap')
+if path not in sys.path:
+	sys.path.insert(0,path)
+	os.environ['DJANGO_SETTINGS_MODULE'] = 'test_scrapper.test_scrapper.settings'
+from django.core.wsgi import get_wsgi_application
+from django.contrib.staticfiles.handlers import StaticFilesHandler
+application = StaticFilesHandler(get_wsgi_application())
