--- a/imagenes/desktop.ini
+++ b/imagenes/desktop.ini
@@ -7,3 +7,5 @@ if path not in sys.path:
 from django.core.wsgi import get_wsgi_application
 from django.contrib.staticfiles.handlers import StaticFilesHandler
 application = StaticFilesHandler(get_wsgi_application())
+[LocalizedFileNames]
+Captura de pantalla 2025-06-24 002226.png=@Captura de pantalla 2025-06-24 002226,0
