--- a/imagenes/desktop.ini
+++ b/imagenes/desktop.ini
@@ -9,3 +9,5 @@ from django.contrib.staticfiles.handlers import StaticFilesHandler
 application = StaticFilesHandler(get_wsgi_application())
 [LocalizedFileNames]
 Captura de pantalla 2025-06-24 002226.png=@Captura de pantalla 2025-06-24 002226,0
+Captura de pantalla 2025-07-01 212610.png=@Captura de pantalla 2025-07-01 212610,0
+Captura de pantalla 2025-07-01 211056.png=@Captura de pantalla 2025-07-01 211056,0
